# stappit.github.io

./: .gitignore  .gitmodules  404.html  README.md  about.html  about.markdown  archive.html  atom.xml  build.sh  contact.html  contact.markdown  deploy.sh  index.html  publish.sh  rebuild.sh  site.hs  stappit-github-io.cabal  stappit.github.io.Rproj
categories/: allofstatistics.html  bda3.html  berlin_marathon.html  pfds.html  posts.html  survival_models.html  topic_models.html
css/: bootstrap.min_BACKUP_14222.css  default.css
data/: bda3_chapter_02_exercise_13.csv
drafts/: aos_chap08q05.html  ch08q07.html  miut_ultra_2017.html
posts/: miut_ultra_2017.html  miut_ultra_2017.md  this_site_has_moved.html
tags/: all of statistics.html  basketball.html  bayes.html  bda chapter 2.html  bda chapter 3.html  bda chapter 4.html  bda chapter 5.html  bda.html  behrens-fischer.html  berlin.html  beta-binomial.html  beta.html  binary search tree.html  binary tree.html  binomial heap.html  binomial tree.html  binomial.html  bootstrap.html  cauchy.html  censoring.html  change of variables.html  chapter 2.html  chi2.html  clustering.html  combinatorics.html  conditional expectation.html  conditional variance.html  conjugate prior.html  counter example.html  covariance.html  de finetti.html  deque.html  dirichlet.html  divorce rates.html  domain change.html  eight schools.html  election.html  empirical distribution function.html  exchangeability.html  execution trace.html  (+85 more)
templates/: archive.html  default.html  post-list.html  post.html
tikz/: pfds-ex5.5-output.tex  tree.tikz  (+2 more)
(+143 files in other folders)
