name:               stappit-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , containers >= 0.5.5.1 && < 1
                  , pandoc >= 1.15 && < 2
                  , QuickCheck >= 2.8.1 && < 3
                  , filepath >= 1.3 && < 2
  ghc-options:      -threaded
  default-language: Haskell2010
